# ToolBox

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
example/: base64-pdf-correct.txt  base64-pdf.txt
scripts/: make-icon.mjs
src/: App.tsx  constants.ts  index.css  main.tsx  styles.css  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  ErrorBoundary.tsx  Icon.tsx  Loaders.tsx  SplashLoader.tsx  Updater.tsx
src/components/layout/: CommandPalette.tsx  EmptyState.tsx  SettingsPopover.tsx  Sidebar.tsx  TopBar.tsx
src/components/tools/: Base64Tool.tsx  ConvertTool.tsx  HashTool.tsx  JwtTool.tsx  cryptoTools.tsx  encodingTools.tsx  formatterTools.tsx  generatorTools.tsx  hashingTools.tsx  timeTools.tsx
src/components/ui/: Btn.tsx  CategoryPill.tsx  CopyButton.tsx  ErrorBanner.tsx  FileDropZone.tsx  HashResultRow.tsx  JsonView.tsx  Panes.tsx  Seg.tsx  Select.tsx  SoonBadge.tsx  ToastHost.tsx  toast.ts
src/lib/: crypto.ts  tools.tsx  updater.ts  useMemoRandom.ts
src/store/: toolStore.ts
