[package]
name = "toolbox"
version = "0.1.0"
description = "ToolBox — offline-first developer utilities"
authors = ["you"]
edition = "2021"

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
